--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,17 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.homeLandButton{
+  background: cover;
+  background-color: #1e212d;
+  color: goldenrod;
+  height: 5vh;
+  width: 10vw;
+  border-radius: 5px;border: none;
+  box-shadow: 0px 1px 1px black ;
+  color: white;
+  cursor: pointer;
+  /* margin-top: 10vh; */
+  font-weight: 900;
+}
