--- a/src/components/Gallery/gallery.css
+++ b/src/components/Gallery/gallery.css
@@ -81,11 +81,25 @@ input[type="submit"] {
   flex-direction: column;
 }
 
-/* .image-gallery {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-} */
+.grid-image {
+  cursor: pointer;
+  transition: transform 0.5s;
+}
+
+.grid-image:hover {
+  transform: scale(2);
+  transition: transform 0.5s;
+}
+
+.gallery-image-details {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-container {
+  height: 70%;
+  width: 70%;
+}
