--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,13 +1,71 @@
 .dashboard{
-    position: absolute;
-    margin-left:40vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.dashboard-mob{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
 }
 .dashtop{
-    margin-top: 10vh;
+    margin-top: 40vh;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+}
+.dashtop-mob{
+    margin-top: 15vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .forcards{
     width: 15vw;
-    height: 100%;
-    margin-right: 100px;
+    height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-right: 100px; */
+    transition: ease-out .4s;
+}
+.forcards:hover{
+    transform: scale(1.1);
+    transition: ease-in .4s;
+}
+.card-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20vw;
+}
+#content{
+    
+    background-color: #1e212d;
+}
+
+#content-text{
+    color: white;
+}
+
+.card-container-mob{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+}
+.forcards-mob{
+    width: 10vw;
+    height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 30px 0;
+    transition: ease-out .4s;
+}
+.forcards-mob:hover{
+    transform: scale(1.1);
+    transition: ease-in .4s;
 }
