--- a/src/components/Navbar/Sidebar.css
+++ b/src/components/Navbar/Sidebar.css
@@ -14,7 +14,7 @@
   
   /* Color/shape of burger icon bars on hover*/
   .bm-burger-bars-hover {
-    background: #a90000;
+    background: goldenrod;
   }
   
   /* Position and sizing of clickable cross button */
@@ -39,7 +39,8 @@
   
   /* General sidebar styles */
   .bm-menu {
-    background: #ffffff;
+    
+    background-color: #1e212d;
     padding: 2.5em 1.5em 0;
     font-size: 1.15em;
   }
@@ -47,11 +48,12 @@
   /* Morph shape necessary with bubble or elastic */
   .bm-morph-shape {
     fill: #373a47;
+    text-decoration: none;
   }
   
   /* Wrapper for item list */
   .bm-item-list {
-    color: #1e212d;
+    color: #fff;
     padding: 0.8em;
     text-decoration: none;
   }
@@ -59,12 +61,26 @@
   /* Individual item */
   .bm-item {
     display: inline-block;
+    color: #fff;
+    padding: 20px;
+    margin-bottom: 5px;
+    border:1px solid rgb(31, 30, 30);
+   
+    text-decoration: none;
+    transition: ease-in .5s;
+  }
+
+  .bm-item:hover {
+    display: inline-block;
     color: goldenrod;
+    transition: ease-out .5s;
+    background-color: #fff;
     padding: 20px;
     margin-bottom: 5px;
     border:1px solid black;
     text-decoration: none;
   }
+
   
   /* Styling of overlay */
   .bm-overlay {
