--- a/src/components/Auth/auth.css
+++ b/src/components/Auth/auth.css
@@ -1,6 +1,40 @@
-.password{
-    margin: 100px;
+#password{
+    /* margin: 100px; */
     display: flex;
-    
-    background-color: yellowgreen;
+    background-color: white;
+}
+
+.login-container{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center ;
+    background-color: #1e212d;
+}
+.login-container > form> label{
+    color: goldenrod;
+    font-size: 1.5rem;
+}
+.login-container > form> input{
+    color: #1e212d;
+    background-color: #fff;
+    font-size: 1.5rem;
+    transition: ease-out .3s;
+    border-radius: 10px;
+    margin-top: 2px;
+}
+
+.login-container > form{
+   display: grid;
+   justify-content: center;
+}
+.submitbtn{
+    display: flex;
+    justify-content: center;
+}
+#show{
+    color: black;
+    width: 40%;
+    margin: 10px auto;
 }
