--- a/src/components/Customer Management/customer.css
+++ b/src/components/Customer Management/customer.css
@@ -1,4 +1,31 @@
 .customertop{
-    margin: 5% 20%;
+    margin: 0% 20%;
     position: absolute;
 }
+.tablecontainer {
+    display: block;
+    justify-content: center;
+    width: 30vw;
+    margin: 0 20%;
+  }
+  table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    text-align: center;
+    /* margin-top: 20px; */
+  }
+
+  td,
+  th {
+    border: 1px solid #dddddd;
+    padding: 8px;
+  }
+
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
+  .customerBg{
+      height: 100vh;
+      width: 100vw;
+  }
