--- a/src/components/Unit/unit.css
+++ b/src/components/Unit/unit.css
@@ -27,3 +27,15 @@
 .list{
     display: flex;
 }
+.deleteunit{
+    display: flex;
+    justify-content: center;
+    height: 3vh;
+    color: black;
+    background-color: goldenrod;
+}
+.confirmButton{
+    width: 10vw;
+    height: 3vh;
+    cursor: pointer;
+}
