input fields and gallery design changes

--- a/src/components/Gallery/gallery.css
+++ b/src/components/Gallery/gallery.css
@@ -65,6 +65,7 @@ input[type="submit"] {
 
 .image-gallery-container {
   display: flex;
+  flex-direction: column;
   width: 100%;
   justify-content: space-between;
 }
