--- a/src/components/Customer Management/customer-dashboard.css
+++ b/src/components/Customer Management/customer-dashboard.css
@@ -1,7 +1,3 @@
-.main-container{
-    height: 100vh;
-}
-
 .units-booked{
     overflow: auto;
     height: 23vh;
@@ -22,4 +18,10 @@
 
 .main-card-grid{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+@media screen and (max-width: 1024px) {
+    .main-card-grid{
+        box-shadow: none;
+    }
 }
