Unit From slightly better

--- a/src/components/Unit/unit.css
+++ b/src/components/Unit/unit.css
@@ -1,4 +1,12 @@
 .unittop{
+    padding: 2%;
+    margin: 5% 20%;
+    position: absolute;
+}
+.unittop-form{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    height: 100vh;
+    padding: 2%;
     margin: 5% 20%;
     position: absolute;
 }
@@ -38,4 +46,16 @@
     width: 10vw;
     height: 3vh;
     cursor: pointer;
+}
+
+.add-unit-form{
+    padding: 5%;
+}
+input{
+    width: 100%;
+}
+label{
+    font-size: medium;
+    font-weight: 600;
+    margin-bottom: 3%;
 }
