--- a/src/components/Gallery/gallery.css
+++ b/src/components/Gallery/gallery.css
@@ -67,7 +67,7 @@ input[type="submit"] {
   display: flex;
   flex-direction: column;
   width: 100%;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .image-gallery-columns {
@@ -84,6 +84,7 @@ input[type="submit"] {
 
 .image-gallery {
   width: 66%;
+  height: 80%;
   display: flex;
   flex-direction: column;
 }
